[package]
name = "slackfiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.5"
reqwest = { version = "0.11.10", features = ["blocking"] }
rust-crypto = "0.2.36"
url = "2.2.2"
urlencoding = "2.1.0"
